--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ text-splitter = { version = "0.24.1", features = ["tiktoken-rs"] }
 tiktoken-rs = "0.6.0"
 clap = { version = "4.5.32", features = ["derive"] }
 unescape = "0.1.0"
+axum = "0.8.1"
+tokio-stream = "0.1.17"
